--- a/projects/TileK/tests/accelerator/OpenCL/Makefile.am
+++ b/projects/TileK/tests/accelerator/OpenCL/Makefile.am
@@ -20,14 +20,10 @@ C_FLAGS=-O0 -g -I$(TILEK_INC) -DTILEK_ACCELERATOR -DTILEK_TARGET_OPENCL
 LD_FLAGS=-lrt $(TILEK_RTL) $(KLT_RTL) -lOpenCL
 
 CHECK_TARGET=
-if ROSE_HAVE_OPENCL_INC
-if ROSE_HAVE_OPENCL_LIB
+if USE_ROSE_OPENCL_SUPPORT
 CHECK_TARGET+=check-test_1 check-test_2
-C_FLAGS+=-I@OPENCL_INC_DIR@
-LD_FLAGS+=-L@OPENCL_LIB_DIR@
-else
-CHECK_TARGET+=rose_test_1.c rose_test_2.c
-endif
+C_FLAGS+=-I@OPENCL_INCLUDE_PATH@
+LD_FLAGS+=-L@OPENCL_LIB_PATH@
 else
 CHECK_TARGET+=rose_test_1.c rose_test_2.c
 endif
